--- a/Peak_picking_algorithm_python.ipynb
+++ b/Peak_picking_algorithm_python.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "762c1a1f",
    "metadata": {},
    "outputs": [
@@ -23,41 +23,42 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "def find_peaks_with_threshold(signal_vector, min_int_threshold, min_points):\n",
-    "    peaks = []\n",
-    "    peak_start = None\n",
-    "    peak_end = None\n",
-    "    peak_length = 0\n",
+    "    peaks = []  # List to store the start and end indices of detected peaks\n",
+    "    peak_start = None  # Start index of the current peak\n",
+    "    peak_end = None  # End index of the current peak\n",
+    "    peak_length = 0  # Length of the current peak\n",
     "\n",
+    "    # Iterate through the signal vector\n",
     "    for index in range(len(signal_vector)):\n",
     "        value = signal_vector[index]\n",
-    "        if value > min_int_threshold:\n",
-    "            if peak_start is None:\n",
+    "        if value > min_int_threshold:  # Check if the value exceeds the threshold\n",
+    "            if peak_start is None:  # Start a new peak if not already started\n",
     "                peak_start = index\n",
-    "            peak_end = index\n",
-    "            peak_length += 1\n",
-    "        elif peak_start is not None:\n",
-    "            if peak_length >= min_points:\n",
-    "                peaks.append([peak_start, peak_end])\n",
-    "            peak_start = None\n",
-    "            peak_end = None\n",
-    "            peak_length = 0\n",
+    "            peak_end = index  # Update the end index of the current peak\n",
+    "            peak_length += 1  # Increment the length of the current peak\n",
+    "        elif peak_start is not None:  # If the value is below the threshold and a peak was ongoing\n",
+    "            if peak_length >= min_points:  # Check if the peak meets the minimum points requirement\n",
+    "                peaks.append([peak_start, peak_end])  # Append the peak to the list\n",
+    "            peak_start = None  # Reset for the next potential peak\n",
+    "            peak_end = None  # Reset for the next potential peak\n",
+    "            peak_length = 0  # Reset the peak length\n",
     "\n",
     "    # Check if the last peak was not appended\n",
     "    if peak_start is not None and peak_length >= min_points:\n",
     "        peaks.append([peak_start, peak_end])\n",
     "\n",
-    "    return peaks\n",
+    "    return peaks  # Return the list of detected peaks\n",
     "\n",
     "# Example usage\n",
     "ints = [1.3, 1, 2, 4, 1.5, 1.8, 3, 5, 5.5, 4.3, 3, 1.5, 1.8, 1.4, 1.9, 1, 2, 3.2, 4.5, 5.3, 5.8, 5.1, 4, 3, 2, 1, 1.1]\n",
-    "min_int_threshold = 2.2\n",
-    "min_points = 2\n",
+    "min_int_threshold = 2.2  # Minimum intensity threshold to consider a point as part of a peak\n",
+    "min_points = 4  # Minimum number of points to form a valid peak\n",
     "peaks = find_peaks_with_threshold(ints, min_int_threshold, min_points)\n",
     "\n",
     "# Plotting the signal and detected peaks\n",
     "plt.plot(ints, label='Signal')\n",
     "for peak in peaks:\n",
-    "    plt.axvspan(peak[0], peak[1], color='red', alpha=0.3)\n",
+    "    plt.axvspan(peak[0], peak[1], color='red', alpha=0.3)  # Highlight the peaks\n",
     "plt.xlabel('Index')\n",
     "plt.ylabel('Intensity')\n",
     "plt.title('Detected Peaks')\n",
